--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -4,28 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Aplicación Web</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header>
-    <h1>Bienvenido a Mi Aplicación Web</h1>
-</header>
-<main>
-    <section id="hello-section">
-        <h2>Servicio Hello</h2>
-        <input type="text" id="name-input" placeholder="Ingresa tu nombre">
-        <button onclick="sayHello()">Saludar</button>
-        <p id="hello-result"></p>
-    </section>
-    <section id="pi-section">
-        <h2>Valor de Pi</h2>
-        <button onclick="getPi()">Obtener Pi</button>
-        <p id="pi-result"></p>
-    </section>
-</main>
-<footer>
-    <p>Desarrollado con mi nuevo framework web</p>
-</footer>
-<script src="script.js"></script>
+    <header>
+        <h1>Desarrollo de FrameWork Web</h1>
+    </header>
+    <main>
+        <section id="hello-section">
+            <h2>Servicio Hello</h2>
+            <input type="text" id="name-input" placeholder="Ingresa tu nombre">
+            <button onclick="sayHello()">Saludar</button>
+            <p id="hello-result"></p>
+        </section>
+
+        <section id="new-section">
+            <h2>Nueva Sección</h2>
+            <p>Este es el contenido de la nueva sección. Aquí puedes agregar cualquier información adicional o funcionalidades.</p>
+        </section>
+
+        <section id="pi-section">
+            <h2>Valor de Pi</h2>
+            <button onclick="getPi()">Obtener Pi</button>
+            <p id="pi-result"></p>
+        </section>
+    </main>
+    <footer>
+        <p>Desarrollado con mi nuevo framework web</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
