--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -6,32 +6,124 @@
     <title>Mi Aplicación Web</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: url('logo.jpg');
+            background-size: cover;
+            color: #333;
+        }
+
+        header {
+            background-color: rgba(0, 0, 0, 0.7); 
+            color: #fff;
+            padding: 1rem 2rem;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            position: sticky;
+            top: 0;
+            width: 100%;
+        }
+
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 2rem;
+            min-height: 80vh;
+        }
+
+        .card {
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            margin: 1rem;
+            padding: 2rem;
+            width: 100%;
+            max-width: 600px;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 2rem;
+            font-weight: 700;
+        }
+
+        h2 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+        }
+
+        input, button {
+            padding: 0.75rem;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            width: calc(100% - 1.5rem);
+            margin: 0.5rem 0;
+            font-size: 1rem;
+        }
+
+        button {
+            background-color: #00796b;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #004d40;
+        }
+
+        footer {
+            background-color: rgba(0, 0, 0, 0.7); /* Negro con transparencia */
+            color: #fff;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Desarrollo de FrameWork Web</h1>
     </header>
     <main>
-        <section id="hello-section">
-            <h2>Servicio Hello</h2>
+        <div class="card" id="hello-section">
+            <h2>Servicio Saludo</h2>
             <input type="text" id="name-input" placeholder="Ingresa tu nombre">
-            <button onclick="sayHello()">Saludar</button>
+            <button onclick="salute()">Saludar</button>
             <p id="hello-result"></p>
-        </section>
+        </div>
 
-        <section id="new-section">
-            <h2>Nueva Sección</h2>
-            <p>Este es el contenido de la nueva sección. Aquí puedes agregar cualquier información adicional o funcionalidades.</p>
-        </section>
+        <div class="card" id="time-section">
+            <h2>Fecha y Hora</h2>
+            <button onclick="getDateTime()">Obtener fecha actual</button>
+            <p id="date-result"></p>
+        </div>
 
-        <section id="pi-section">
+        <div class="card" id="pi-section">
             <h2>Valor de Pi</h2>
-            <button onclick="getPi()">Obtener Pi</button>
+            <button onclick="obtainPi()">obtener valor Pi</button>
             <p id="pi-result"></p>
-        </section>
+        </div>
+
+        <div class="card" id="sum-section">
+            <h2>Sumar Dos Números</h2>
+            <input type="number" id="num1" placeholder="Número 1">
+            <input type="number" id="num2" placeholder="Número 2">
+            <button onclick="calculateSum()">Calcular Suma</button>
+            <p id="sum-result"></p>
+        </div>
     </main>
     <footer>
-        <p>Desarrollado con mi nuevo framework web</p>
+        <p>Desarrollado por Nicolás Achuri - AREP 2024</p>
     </footer>
     <script src="script.js"></script>
 </body>
